--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0",
+        "sven/artisan-view": "^3.2",
         "xethron/migrations-generator": "^2.0"
     },
     "config": {
