--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel":"~2.1.0",
         "phpoffice/phpspreadsheet": "^1.8",
         "zizaco/entrust": "5.2.x-dev"
     },
